# elapsed

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: main.rs
src/cli/: mod.rs
src/elapsed/: mod.rs
