[package]
name = "elapsed"
version = "0.1.1"
authors = ["Yury Antonov <1390348+yantonov@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
chrono = "0.4.31"
colored = "2.1.0"
